# remote-command-server

./: .coveragerc  .gitignore  Makefile  README.md  commands.sqlite3  conftest.py  mkdocs.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: example.md  index.md  quickstart.md
remote_command_server/: cli.py  crud.py  database.py  main.py  models.py  schemas.py  util.py
saao_deployment_server/: crud.py  main.py  models.py  schemas.py
tests/: test_cli.py  test_crud.py  test_dependencies.py  test_remote_command_server.py  test_run_endpoint.py  test_saao_deployment_server.py  test_util.py
