[tool.poetry]
name = "saao-deployment-server"
version = "0.1.0"
description = ""
authors = ["Christian Hettlage <hettlage@saao.ac.za>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
