[tool.poetry]
name = "saao-deployment-server"
version = "0.1.0"
description = ""
authors = ["Christian Hettlage <hettlage@saao.ac.za>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.63.0"}
uvicorn = {extras = ["standard"], version = "^0.13.3"}
SQLAlchemy = "^1.3.22"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
flake8 = "^3.8.4"
tox = "^3.21.2"
isort = "^5.7.0"
mypy = "^0.790"
pytest-cov = "^2.11.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
